# jquery

./: AUTHORS  CHANGES.rst  README.rst  pyproject.toml
.github/workflows/: coverage.yml  test.yml
sphinxcontrib/: jquery.py
sphinxcontrib/jquery/: __init__.py
tests/: test_jquery_installed.py
