[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

# project metadata
[project]
name = "sphinxcontrib-jquery"
version = "1.0.0"
description = "Extension to include jQuery on newer Sphinx releases"
readme = "README.rst"
license.text = "BSD Zero Clause License"
requires-python = ">=3.7"

# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
]
dependencies = [
    "setuptools",  # for pkg_resources
]

[[project.authors]]
name = "Adam Turner"
